src/sass/partials/_notes-files-add.scss
.new-note-file {
  position: absolute;
  z-index: 1000;
  top: 9rem;
  right: 2.5rem;
  bottom: 0;
  overflow: hidden;
  width: 40%;
  min-width: 34rem;
  background: $white;
  box-shadow: 0 0 30px 0 rgba($black, .3);
  @include transition(all 0.1s ease-in-out);

  &.minimize {
    top: calc(100vh - 2.4375rem);

    .controls {
      .btn-icon {
        i.fa-window-minimize {
          &:before {
            content: "\f2d0";
          }
        }
      }
    }

    .mainContainer {
      form {
        .content {
          display: none;
        }

        .note-file-footer-button-group {
          display: none;
        }
      }
    }
  }

  .title-bar {
    display: flex;
    flex-direction: row;
    flex-grow: 0;
    flex-shrink: 0;
    flex-wrap: nowrap;
    height: 2.4375rem;
    background: $bright-blue-darken-04;

    * {
      color: $white;
    }

    .btn {
      padding: 0 ($padding/2);

      &:focus {
        outline: none;
        outline-offset: 0;
        background-color: rgba($bright-blue, .1);
      }
    }

    .title {
      align-self: auto;
      flex: 1 1 auto;
      order: 0;
      padding: $padding ($padding*2);
      cursor: pointer;
    }

    .controls {
      display: flex;
      align-self: auto;
      flex: 0 1 auto;
      order: 0;
      padding: $padding ($padding*2) $padding 0;
      font-size: $font-size-h4;

      .btn {
        margin-left: $padding;
      }
    }
  }

  .mainContainer {
    display: flex;
    flex-direction: column;
    height: calc(100% - 2.4375rem;);

    form {
      display: flex;
      flex-direction: column;
      height: 100%;

      .content {
        display: flex;
        overflow-x: hidden;
        overflow-y: hidden;
        flex-direction: column;
        flex-grow: 1;
        flex-shrink: 1;
        padding: ($padding*2);

        label,
        select {
          flex-grow: 0;
          flex-shrink: 0;

          &[name='fileType'] {
              margin-bottom: $padding;
          }
        }

        .text-area-wrapper {
          display: flex;
          flex-direction: column;
          flex-grow: 1;
          flex-shrink: 1;
          min-height: 4rem;
          margin: ($padding*2) 0;

          textarea {
            flex-grow: 1;
            flex-shrink: 1;
          }
        }

        > div {
            flex-grow: 1;
            flex-shrink: 1;
            display: flex;
            flex-direction: column;
            height: auto;
            overflow: hidden;
        }


      }

      .note-file-footer-button-group {
        display: flex;
        flex-grow: 0;
        flex-shrink: 0;
        justify-content: flex-end;
        padding: $padding;
        border-top: 1px dotted $warm-gray-04;
        background: $white;

        .btn {
          margin-left: $padding;
        }
      }
    }
  }
}

.new-note-files {
  @include transition(all 0.2s ease-in-out);
}

.file-list {
  .react-bs-table-tool-bar {
    .toolbar {
      .input-group {
        flex-grow: 0;
        flex-shrink: 0;

        .btn-files {
          color: $white;
          background: $bright-blue-darken-04;
        }
      }
    }
  }
}

.notes-list {
  .note-grid-wrapper {
    &.filter-attachments {
      .react-bs-table-tool-bar {
        .search {
          display: none;
        }
      }

      .react-bs-table {
        .note-type {
          display: none;
        }

        .note {
          display: none;
        }

        .attachments {
          width: auto;
        }
      }
    }

    .react-bs-table {
      .created-date {
        width: 16%;
        min-width: 9.75rem;
        white-space: normal;
      }

      .created-by {
        width: 16%;
        min-width: 9.75rem;
        white-space: normal;
      }

      .note-type {
        width: 9%;
        min-width: 6rem;
      }

      .file-type {
        width: 16%;
        min-width: 12rem;
        white-space: normal;
      }

      .note {
        white-space: normal;
      }

      .attachments {
        width: 10%;
        min-width: 7rem;
        white-space: normal;

        span {
          div {
            cursor: pointer;
            color: $bright-blue-lighten-01;

            &:hover {
              color: $bright-blue-darken-02;
            }
          }
        }
      }
    }
  }
}

.filter-tabs {
  .group-label {
    margin: 0;
  }

  .form-group.segmented {
    .segmented-answer-wrapper {
      border-bottom: 1px solid $bright-blue-darken-04;

      > div {
        flex-grow: 0;
        padding: 0;

        .label-segmented {
          border: none;

          span {
            justify-content: flex-start;
            padding: ($padding*2);
            border: none;
            border-bottom-width: 5px;
            border-bottom-style: solid;
            border-radius: 0;
            background: none;
            font-weight: $font-weight-normal;
            @include button-variant($warm-gray-10, $white, rgba($bright-blue-darken-04, 0));

            &:hover {
              border-bottom: 5px solid rgba($bright-blue-darken-02, .3);
              background: $warm-gray-00;
            }
          }

          input[type="radio"] {
            &:checked {
              + span {
                color: $warm-gray-14;
                border-bottom: 5px solid $bright-blue-darken-04;
                background: none;
              }
            }
          }
        }
      }
    }
  }
}
//compact grid

.react-bs-table-container {
  &.compact-table {
    .react-bs-table {
      .table-bordered {
        tr {
          th {
            font-size: $font-size-sm;
          }

          td {
            font-size: $font-size-sm;
          }
        }
      }
    }
  }
}
//notes attachment styles

.react-bs-table-container {
  &.notes {
    .react-bs-table {
      .table-bordered {
        tr {
          th {
            &.attachments {
              width: 6%;
              min-width: 3rem;
            }
          }

          td {
            &.attachments {
              width: 6%;
              min-width: 3rem;
              white-space: normal;

              span {
                display: flex;
              }
            }
          }
        }

        .attachments {
          span {
            .attachment-wrapper {
              i.fa {
                display: flex;
                align-items: center;
                justify-content: center;
                width: 1rem;
                height: 1rem;

                &:before {
                  content: "\F15B";
                }
              }

              .btn {
                display: none;
              }
            }
          }
        }
      }
    }
  }
}

.react-bs-table-container {
  &.files {
    .react-bs-table {
      .table-bordered {
        tr {
          th {}

          td {}
        }

        .attachments {
          span {
            .attachment-wrapper {
              display: flex;
              align-items: center;

              i.fa {
                display: flex;
                align-items: center;
                justify-content: center;
                width: 1rem;
                height: 1rem;

                &:before {
                  content: "\F15B";
                }
              }

              .btn {
                padding-left: 0;
              }
            }
          }
        }

        .created-date {
          width: 16%;
          min-width: 9.75rem;
        }

        .created-by {
          width: 16%;
          min-width: 9.75rem;
        }

        .file-type {
          width: 20%;
          min-width: 10rem;
        }

        .attachments {
          width: 48%;
          min-width: 26.5rem;
        }
      }
    }
  }
}

